# limonEngine

./: .bettercodehub.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  INSTALLATION  README.md
.github/workflows/: build-base-image.yml  docker-image.yml
Data/: Options.xml  nodeGraph.xml  renderPipeline.xml
Data/Animations/: moveHiddenDoorDown.xml  rotateCoin.xml  rotateLever.xml  stairUpMovement.xml
Data/Maps/: World001.xml  World002.xml
Docs/: Dependencies.txt  Notes.txt
Engine/: Options.xml  assetExtensions.xml  forward_nodeGraph.xml  forward_renderPipeline.xml  forward_ssao_renderPipeline.xml  inputBindings.xml  nodeGraph.xml  renderPipeline.xml
Engine/Scripts/: PythonPlayerExtension.py  PythonThirdPersonCamera.py  __init__.py  actor_interface.py  camera_attachment.py  camera_extension_interface.py  generic_parameter.py  limonimp.py  player_extension_interface.py  python_cowboy_enemy.py  python_orthographic_camera_rig.py  python_player_extension.py  python_third_person_camera.py  simple_guard_actor.py  trigger_interface.py  vec3.py
Engine/scripts/: limon_interface.py
GraphicBackends/: OpenGLESGraphics.cpp  OpenGLESGraphics.h  OpenGLGraphics.cpp  OpenGLGraphics.h
Samples/: CoinPickUpOnTrigger.h  CowboyEnemyAI.cpp  CowboyEnemyAI.h  CowboyShooterExtension.cpp  CowboyShooterExtension.h  DoorAnimationAction.cpp  DoorAnimationAction.h  HumanEnemy.cpp  HumanEnemy.h  KillCowboyPlayer.cpp  KillCowboyPlayer.h  MayanLever.h  ShooterPlayerExtension.cpp  ShooterPlayerExtension.h  WesternMenuPlayerExtension.cpp  WesternMenuPlayerExtension.h
cmake/: BundlePython.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindTinyXML2.cmake  cotire.cmake
docs/: .gitignore  404.html  CNAME  LICENSE  _config.yml  about.md  archive.html  categories.html  feed.xml  index.html  status.md  tags.html
docs/_data/: links.yml  thanks.yml  tops.yml
docs/_includes/: disqus-comments.html  disqus-counts.html  footer.html  github-comments.html  header.html  isso-comments.html  links-list.html  sidebar.html
docs/_layouts/: default.html  post.html
docs/_posts/: 2017-12-30-Hello-world.markdown  2017-12-30-Poorer-mans-character-controller.markdown  2018-06-01-Shared-Library-support.markdown  2018-09-01-Limon-Engine-Review.markdown  2018-12-14-SSAO_With_Forward_rendering.markdown  2019-02-12-New_Release_0.6.markdown  2019-12-19-Development_Slowdown.markdown  2026-03-23-New-Render-System.markdown  2026-03-24-Render-system-how-to.md  208-06-01-Shared-Library-support.markdown
docs/_sass/: _gh-comments.scss  xixia.scss
docs/js/: github-comments.js
libs/: CmakeLists.txt
libs/ImGui/: imconfig.h
libs/ImGuizmo/: ImGuizmo.cpp  ImGuizmo.h  ImSequencer.cpp  ImSequencer.h
libs/OpenAL-Soft/: CMakeLists.txt
resources/: limonEngine.rc  limonEngine.res
samples/: CoinPickUpOnTrigger.cpp  CoinPickUpOnTrigger.h  CowboyEnemyAI.cpp  CowboyEnemyAI.h  CowboyShooterExtension.cpp  CowboyShooterExtension.h  DoorAnimationAction.cpp  DoorAnimationAction.h  HumanEnemy.cpp  HumanEnemy.h  KillCowboyPlayer.cpp  KillCowboyPlayer.h  MayanCoinPickup.cpp  MayanCoinPickup.h  MayanLever.cpp  MayanLever.h  ObjectAttachedCameraRig.h  OptionsDisplayAction.cpp  OptionsDisplayAction.h  OrthographicCameraRig.h  SSAOKernelRenderMethod.cpp  SSAOKernelRenderMethod.h  ShooterPlayerExtension.cpp  ShooterPlayerExtension.h  ThirdPersonCameraAttachment.cpp  ThirdPersonCameraAttachment.h  ThirdPersonCameraRig.h  WesternMenuPlayerExtension.cpp  WesternMenuPlayerExtension.h  WesternStoryAtGraveAction.cpp  WesternStoryAtGraveAction.h  WesternStoryAtSaloonAction.cpp  WesternStoryAtSaloonAction.h  WesternStoryAtTrainAction.cpp  WesternStoryAtTrainAction.h  WesternStoryAtUndertakerAction.cpp  WesternStoryAtUndertakerAction.h  WesternStoryNewGameAction.cpp  WesternStoryNewGameAction.h  WesternStoryStartupAction.cpp  (+1 more)
src/: ALHelper.cpp  ALHelper.h  AnimationSequencer.cpp  AnimationSequencer.h  Attachable.h  BulletDebugDrawer.cpp  BulletDebugDrawer.h  Camera.cpp  Camera.h  CameraAttachment.h  CubeMap.cpp  CubeMap.h  Editor.cpp  Editor.h  FontManager.cpp  FontManager.h  GLHelper.cpp  GLHelper.h  GLSLProgram.cpp  GLSLProgram.h  GUIFPSCounter.cpp  GUIFPSCounter.h  GUILayer.cpp  GUILayer.h  GUIRenderable.cpp  GUIRenderable.h  GUIText.cpp  GUIText.h  GraphicsPipelineStage.cpp  GraphicsPipelineStage.h  HasTransform.h  ImGuiHelper.cpp  ImGuiHelper.h  InputHandler.cpp  InputHandler.h  InputStates.cpp  InputStates.h  Light.cpp  Light.h  Material.cpp  (+38 more)
src/AI/: AIMovementGrid.cpp  AIMovementGrid.h  AIMovementNode.h  Actor.cpp  Actor.h  ActorInterface.cpp  ActorInterface.h  HumanEnemy.cpp  HumanEnemy.h
src/API/: ActorInterface.h  CMakeLists.txt  GraphicsInterface.h  GraphicsProgram.cpp  GraphicsProgram.h  InputStates.cpp  InputStates.h  LimonAPI.cpp  LimonAPI.h  LimonConverter.h  LimonTypes.h  Options.h  PlayerExtensionInterface.h  RenderMethodInterface.h  TriggerInterface.cpp  TriggerInterface.h
src/Assets/: Asset.h  AssetManager.cpp  AssetManager.h  BoneNode.cpp  BoneNode.h  CubeMapAsset.cpp  CubeMapAsset.h  GraphicsProgramAsset.cpp  GraphicsProgramAsset.h  MeshAsset.cpp  MeshAsset.h  ModelAsset.cpp  ModelAsset.h  SoundAsset.cpp  SoundAsset.h  TextureAsset.cpp  TextureAsset.h
src/Camera/: Camera.h  CubeCamera.h  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/Editor/: Editor.cpp  Editor.h  EditorRenderable.h  FlameGraph.cpp  FlameGraph.h  (+5 more)
src/limonAPI/: ActorInterface.cpp  ActorInterface.h  CMakeLists.txt  CameraAttachment.h  CameraExtensionInterface.cpp  CameraExtensionInterface.h  InputStates.cpp  InputStates.h  LimonAPI.cpp  LimonAPI.h  LimonConverter.h  LimonTypes.h  Options.h  PlayerActorInterface.h  PlayerExtensionInterface.h  ProfileScope.cpp  ProfileScope.h  TriggerInterface.h
src/limonAPI/Graphics/: GraphicsInterface.h  GraphicsProgram.cpp  GraphicsProgram.h  GraphicsProgramPreprocessor.cpp  RenderMethodInterface.cpp  RenderMethodInterface.h  Uniform.h
src/limonAPI/util/: HashUtil.h  Logger.h  NoexceptFunction.h
(+376 files in other folders)
